# task-management-api

./: .env.example  .gitignore  justfile  main.py  pyproject.toml  tasks.db
alembic/: env.py
alembic/versions/: 1fbcbacf5aac_add_due_date_to_task.py  738c7771a080_add_projects.py  7a3444889094_set_due_date_to_nullable_false_again.py  b6f2493a517c_set_due_date_to_nullable_false.py
app/: dependencies.py  deps.py  main.py  models.py
app/api/routes/: tasks.py
app/core/: config.py  cors.py  db.py  logging.py  security.py
app/routers/: auth.py  projects.py  tasks.py
app/routes/: tasks.py
